--- a/in.html
+++ b/in.html
@@ -16,9 +16,9 @@
             <nav>
                 <div class="logo"><a href="index.html">z的诗词博客站</a></div>
                 <ul>
-                    <li><a href="in.html" class="active">首页</a></li>
-                    <li><a href="login.html">登录</a></li>
-                    <li><a href="message.html">留言</a></li>
+                    <li><a href="./in.html" class="active">首页</a></li>
+                    <li><a href="./login.html">登录</a></li>
+                    <li><a href="./message.html">留言</a></li>
                 </ul>
             </nav>
             <div class="banner">
