--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>注册</title>
+    <title>z的诗词博客站</title>
 
     <link rel="stylesheet" href="css/regist.css">
     <link rel="shortcut icon" href="images/camera.ico">
@@ -77,7 +77,7 @@
         </div>
     </div>
     <div class="reg_right">
-        <p>已有账号?<a href="login.html">立即登录</a></p>
+        <p>已有账号?<a href="./login.html">立即登录</a></p>
     </div>
 </div>
 </body>
