--- a/login.html
+++ b/login.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登录</title>
-    <link rel="stylesheet" href="css/login.css">
-    <link rel="stylesheet" href="css/Loading.css">
+    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/Loading.css">
 </head>
 <body>
     <div class="back" id="back">
         <div class="log" id="log">
             <div class="logtitle">LOGIN</div><p></p>
-            <form action="/blog_list.html/blog_list.html" id="logbody" class="logbody" onsubmit="return login()">
+            <form action="./blog_list.html/blog_edit.html" id="logbody" class="logbody" onsubmit="return login()">
                 <input type="text" id="zh" size="20" class="txt" placeholder="账户">
                 <br>
                 <input type="password" id="mm" size="20" class="txt" placeholder="密码">
                 <br>
                 <input type="submit" value="登录" id="sub" class="sub">
-                <a href="/in.html"><input type="button" value="返回主页" id="ykbt" class="ykbt"></a>
-                <a href="/register.html"><input type="button" value="注册" id="ykbt" class="ykbt"></a>
+                <a href="./in.html"><input type="button" value="返回主页" id="ykbt" class="ykbt"></a>
+                <a href="./register.html"><input type="button" value="注册" id="ykbt" class="ykbt"></a>
             </form>     
         </div>
     </div>
@@ -29,6 +29,6 @@
             <div class="dot" style="--i:2"></div>
         </div>
     </div>
-    <script src="js/login.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 </html>
