--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <div class="back" id="back">
         <div class="log" id="log">
             <div class="logtitle">LOGIN</div><p></p>
-            <form action="./blog_list/blog_edit.html" id="logbody" class="logbody" onsubmit="return login()">
+            <form action="./blog_list/blog_list.html" id="logbody" class="logbody" onsubmit="return login()">
                 <input type="text" id="zh" size="20" class="txt" placeholder="账户">
                 <br>
                 <input type="password" id="mm" size="20" class="txt" placeholder="密码">
