最终提交版本

--- a/in.html
+++ b/in.html
@@ -79,12 +79,12 @@
                     </div>
                     <div class="text-section">
                             <h2>喜欢诗词</h2>
-                        <div class="sub-heading">诗词名</div>
-                        <div class="sub-heading">诗词名 </div>
-                        <div class="sub-heading">诗词名</div>
+                        <div class="sub-heading">《春江花月夜》</div>
+                        <div class="sub-heading">《浣溪沙·细雨斜风作晓寒》</div>
+                        <div class="sub-heading">《独坐敬亭山》</div>
 
 
-                            <div class="sub-heading">最喜欢的诗</div>
+                            <div class="sub-heading">最喜欢的诗句</div>
                            
                             <div class="sub-heading">静心得意，天下逢春</div>  
                         -->
@@ -113,22 +113,21 @@
                             <h2>会部分编程语言解决问题</h2>
                             <p> &nbsp;</p>  
                             <p>python,java,matlab,c,lingo等</p> 
-                            <p>无</p>
                         </div>
                         <div class="card">
-                            <h2>无</h2>
+                            <h2>交际能力</h2>
                             <p>&nbsp;</p>
-                            <p>无</p>
+                            <p>喜欢交朋友</p>
                         </div>
                         <div class="card">
-                            <h2>无</h2>
+                            <h2>体育能力</h2>
                             <p>&nbsp;</p>
-                            <p>无</p>
+                            <p>喜欢跑步、滑冰、溜冰。</p>
                         </div>
                         <div class="card">
-                            <h2>无</h2>
+                            <h2>数学建模</h2>
                             <p>&nbsp;</p>
-                            <p>无</p>
+                            <p>掌握常见模型算法</p>
                         </div>
                         <div class="card">
                             <h2>摸鱼大师!</h2>
