--- a/register.html
+++ b/register.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="css/regist.css">
     <link rel="shortcut icon" href="images/camera.ico">
 </head>
+
 <body>
 <!--头部-->
 <div id="reg_header">
     <div class="reg_h_center">
         <div class="reg_h_left">
-            <h3>欢迎注册</h3>
+            <h3>欢迎注册Z的诗词博客站</h3>
         </div>
     </div>
 </div>
