--- a/blog_list/blog_edit.html
+++ b/blog_list/blog_edit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="x-ua-compatible" content="IE=7,9,10" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blog_edit</title>
     <link rel="stylesheet" href="../css/common.css">
@@ -23,6 +24,7 @@
         <!-- 用来占据中间位置 -->
         <span class="spacer"></span>
         <a href="blog_list.html">主页</a>
+        <a href="blog_manage.html">管理页</a>
         <a href="blog_edit.html">写博客</a>
         <a href="../login.html">注销</a>
     </div>
