--- a/blog_list/blog_manage.html
+++ b/blog_list/blog_manage.html
@@ -19,9 +19,9 @@
         <span class="title">我的博客系统</span>
         <!-- 用来占据中间位置 -->
         <span class="spacer"></span>
-        <a href="blog_list.html">主页</a>
-        <a href="blog_manage.html">管理页</a>
-        <a href="blog_edit.html">写博客</a>
+        <a href="./blog_list.html">主页</a>
+        <a href="./blog_manage.html">管理页</a>
+        <a href="./blog_edit.html">写博客</a>
         <a href="../login.html">注销</a>
     </div>
 
