--- a/in.html
+++ b/in.html
@@ -27,7 +27,7 @@
                     <div class="sub-heading">这是一个极具个人风格的网站。</div>
                     <div class="sub-heading">这里存放仅是我个人的一些随笔。</div>
                     <div class="sub-heading">可以看作一个表达情绪的地方。</div>
-                    <button class="showSlideBar">更多</button>
+                    <button class="showSlideBar"><a href="./message.html">更多</a></button>
                 </div>
             </div>
         </header>
